[gd_scene load_steps=75 format=2]

[ext_resource path="res://Actors/Player/Images/Walk_Sprite/sprite_001.png" type="Texture" id=1]
[ext_resource path="res://Images/Lighting/lighting.png" type="Texture" id=2]
[ext_resource path="res://Audio/Game_Music.tscn" type="PackedScene" id=3]
[ext_resource path="res://Actors/Player/Player.gd" type="Script" id=4]
[ext_resource path="res://UI/Exit_Text.tscn" type="PackedScene" id=5]
[ext_resource path="res://Actors/Player/Images/Walk_Sprite/Main_Character-Sheet.png" type="Texture" id=6]
[ext_resource path="res://Actors/Player/PlayerCamera.tscn" type="PackedScene" id=7]
[ext_resource path="res://Audio/SFX/Footsteps/Footstep_Grass_Generic_Shoe_v5_wav.wav" type="AudioStream" id=8]
[ext_resource path="res://Audio/SFX/Footsteps/Footstep_Grass_Generic_Shoe_v6_wav.wav" type="AudioStream" id=9]
[ext_resource path="res://Audio/SFX/Footsteps/Footstep_Grass_Generic_Shoe_v2_wav.wav" type="AudioStream" id=10]
[ext_resource path="res://Actors/Player/Images/Walk_Sprite/Main_Character_left.png" type="Texture" id=11]
[ext_resource path="res://Audio/SFX/Footsteps/Footstep_Grass_Generic_Shoe_v4_wav.wav" type="AudioStream" id=12]
[ext_resource path="res://addons/randomAudioStreamPlayer/random_audio_stream_player.gd" type="Script" id=13]
[ext_resource path="res://Actors/Player/Images/Walk_Sprite/Idle_left.png" type="Texture" id=14]
[ext_resource path="res://Actors/Player/Images/Walk_Sprite/Main_Character_right.png" type="Texture" id=15]
[ext_resource path="res://Actors/NPC/New folder/shadow.png" type="Texture" id=16]
[ext_resource path="res://Actors/Player/Shadow.gd" type="Script" id=17]
[ext_resource path="res://Actors/Player/Images/Walk_Sprite/Front_walk.png" type="Texture" id=18]

[sub_resource type="Animation" id=37]
resource_name = "Idle_Back"
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle_Back" ]
}

[sub_resource type="Animation" id=38]
resource_name = "Idle_Front"
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle_Front" ]
}

[sub_resource type="Animation" id=39]
resource_name = "Idle_Left"
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle_Left" ]
}

[sub_resource type="Animation" id=40]
resource_name = "Idle_Right"
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle_Right" ]
}

[sub_resource type="Animation" id=69]
resource_name = "Walk_Back"
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Walk_Back" ]
}

[sub_resource type="Animation" id=41]
resource_name = "Walk_Front"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Walk_Front" ]
}

[sub_resource type="Animation" id=74]
resource_name = "Walk_Left"
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Walk_Left" ]
}

[sub_resource type="Animation" id=88]
resource_name = "Walk_Right"
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Walk_Right" ]
}

[sub_resource type="AnimationNodeAnimation" id=43]
animation = "Idle_Left"

[sub_resource type="AnimationNodeAnimation" id=44]
animation = "Idle_Front"

[sub_resource type="AnimationNodeAnimation" id=45]
animation = "Idle_Back"

[sub_resource type="AnimationNodeAnimation" id=46]
animation = "Idle_Right"

[sub_resource type="AnimationNodeBlendSpace2D" id=47]
blend_point_0/node = SubResource( 43 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 44 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 45 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 46 )
blend_point_3/pos = Vector2( 1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=48]
animation = "Walk_Back"

[sub_resource type="AnimationNodeAnimation" id=66]
animation = "Walk_Front"

[sub_resource type="AnimationNodeAnimation" id=67]
animation = "Walk_Left"

[sub_resource type="AnimationNodeAnimation" id=68]
animation = "Walk_Right"

[sub_resource type="AnimationNodeBlendSpace2D" id=49]
blend_point_0/node = SubResource( 48 )
blend_point_0/pos = Vector2( 0, -1 )
blend_point_1/node = SubResource( 66 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 67 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 68 )
blend_point_3/pos = Vector2( 1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=51]

[sub_resource type="AnimationNodeStateMachineTransition" id=52]

[sub_resource type="AnimationNodeStateMachine" id=42]
states/Idle/node = SubResource( 47 )
states/Idle/position = Vector2( 216, 58 )
states/Walk/node = SubResource( 49 )
states/Walk/position = Vector2( 419, 58 )
transitions = [ "Idle", "Walk", SubResource( 51 ), "Walk", "Idle", SubResource( 52 ) ]
start_node = "Idle"
graph_offset = Vector2( -130, -5 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=50]

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 120 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 120 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 41, 115 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 48, 120 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 6 )
region = Rect2( 48, 0, 48, 120 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 6 )
region = Rect2( 240, 0, 48, 120 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 6 )
region = Rect2( 432, 0, 48, 120 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 6 )
region = Rect2( 624, 0, 48, 120 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 6 )
region = Rect2( 816, 0, 48, 120 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 6 )
region = Rect2( 1008, 0, 48, 120 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 44, 114 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 18 )
region = Rect2( 44, 0, 44, 114 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 18 )
region = Rect2( 88, 0, 44, 114 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 18 )
region = Rect2( 132, 0, 44, 114 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 18 )
region = Rect2( 176, 0, 44, 114 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 18 )
region = Rect2( 220, 0, 44, 114 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 46, 116 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 11 )
region = Rect2( 46, 0, 46, 116 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 11 )
region = Rect2( 92, 0, 46, 116 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 11 )
region = Rect2( 138, 0, 46, 116 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 11 )
region = Rect2( 184, 0, 46, 116 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 11 )
region = Rect2( 230, 0, 46, 116 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 47, 116 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 15 )
region = Rect2( 47, 0, 47, 116 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 15 )
region = Rect2( 94, 0, 47, 116 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 15 )
region = Rect2( 141, 0, 47, 116 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 15 )
region = Rect2( 188, 0, 47, 116 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 15 )
region = Rect2( 235, 0, 47, 116 )

[sub_resource type="SpriteFrames" id=36]
animations = [ {
"frames": [ SubResource( 26 ) ],
"loop": true,
"name": "Idle_Back",
"speed": 5.0
}, {
"frames": [ SubResource( 27 ) ],
"loop": true,
"name": "Idle_Front",
"speed": 5.0
}, {
"frames": [ SubResource( 81 ) ],
"loop": true,
"name": "Idle_Left",
"speed": 5.0
}, {
"frames": [ SubResource( 29 ) ],
"loop": true,
"name": "Idle_Right",
"speed": 5.0
}, {
"frames": [ SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ) ],
"loop": true,
"name": "Walk_Back",
"speed": 8.0
}, {
"frames": [ SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ) ],
"loop": true,
"name": "Walk_Front",
"speed": 8.0
}, {
"frames": [ SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ) ],
"loop": true,
"name": "Walk_Left",
"speed": 8.0
}, {
"frames": [ SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ) ],
"loop": true,
"name": "Walk_Right",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=70]
height = 30.0

[sub_resource type="CircleShape2D" id=3]
radius = 63.7887

[sub_resource type="Animation" id=71]
resource_name = "Idle"

[sub_resource type="Animation" id=72]
resource_name = "Play_Footsteps"
tracks/0/type = "value"
tracks/0/path = NodePath(".:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=73]
resource_name = "VolumeLower"
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}

[node name="Player" type="KinematicBody2D"]
position = Vector2( 0, -15 )
z_index = 3
script = ExtResource( 4 )
speed = 200

[node name="SpawnPointShadow" type="Area2D" parent="."]
position = Vector2( 237, 198 )

[node name="SpawnPointShadow2" type="Area2D" parent="."]
position = Vector2( 311, -135 )

[node name="SpawnPointShadow3" type="Area2D" parent="."]
position = Vector2( -532, -185 )

[node name="SpawnPointShadow4" type="Area2D" parent="."]
position = Vector2( -417, 198 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.545098, 0.545098, 0.545098, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" parent="." instance=ExtResource( 7 )]
zoom = Vector2( 1, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite")
autoplay = "Idle_Front"
anims/Idle_Back = SubResource( 37 )
anims/Idle_Front = SubResource( 38 )
anims/Idle_Left = SubResource( 39 )
anims/Idle_Right = SubResource( 40 )
anims/Walk_Back = SubResource( 69 )
anims/Walk_Front = SubResource( 41 )
anims/Walk_Left = SubResource( 74 )
anims/Walk_Right = SubResource( 88 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 42 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 50 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/Walk/blend_position = Vector2( -0.0923767, -0.146552 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -29 )
frames = SubResource( 36 )
animation = "Idle_Back"
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 8 )
shape = SubResource( 70 )

[node name="Area2D" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1, -26 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 2 )
color = Color( 1, 0.972549, 0.972549, 1 )
energy = 0.8
range_layer_min = -99
range_layer_max = 2
shadow_enabled = true
shadow_gradient_length = 6.0
__meta__ = {
"_edit_lock_": true
}

[node name="Exit" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="Exit"]
anchor_left = 0.365625
anchor_top = 0.383333
anchor_right = 0.484375
anchor_bottom = 0.451481
margin_bottom = 3.2
rect_scale = Vector2( 1, 0.92 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="Exit_Text" parent="Exit/Control" instance=ExtResource( 5 )]
position = Vector2( 666, 439.13 )
scale = Vector2( 1, 1.08696 )

[node name="FootstepPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -10.0
pitch_scale = 0.8
script = ExtResource( 13 )
samples = [ ExtResource( 12 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 8 ) ]
random_strategy = 2
random_volume_range = 1.0
random_pitch_range = 0

[node name="VolumeControl" type="AnimationPlayer" parent="FootstepPlayer"]
anims/Idle = SubResource( 71 )
anims/Play_Footsteps = SubResource( 72 )
anims/VolumeLower = SubResource( 73 )

[node name="Game_Music" parent="." instance=ExtResource( 3 )]

[node name="Shadow" type="Area2D" parent="."]
position = Vector2( 39, -2 )
script = ExtResource( 17 )

[node name="Sprite" type="Sprite" parent="Shadow"]
position = Vector2( 229, -34 )
texture = ExtResource( 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Shadow"]

[node name="HideTimer" type="Timer" parent="Shadow"]

[node name="ShowTimer" type="Timer" parent="Shadow"]
wait_time = 40.0
autostart = true

[connection signal="timeout" from="Shadow/HideTimer" to="Shadow" method="_on_HideTimer_timeout"]
[connection signal="timeout" from="Shadow/ShowTimer" to="Shadow" method="_on_ShowTimer_timeout"]

[editable path="Game_Music"]
